--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -59,12 +59,7 @@ on:
         type: boolean
         default: false
         description: 'DEPRECATED: Build both an arm64 image in addition to the x64 image'
-      hosted-x64:
-        required: false
-        type: boolean
-        default: false
-        description: 'Builds a x64 image, on a github hosted runner x64 machine'
-      self-hosted-x64:
+      self-hosted:
         required: false
         type: boolean
         default: false
