--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -58,17 +58,12 @@ on:
         required: false
         type: boolean
         default: false
-        description: 'DEPRECATED: Build both an arm64 image in addition to the x64 image'
+        description: 'Build both an arm64 image in addition to the x64 image'
       self-hosted:
         required: false
         type: boolean
         default: false
         description: 'Builds a x64 image, on a self-hosted runner x64 machine'
-      self-hosted-arm64:
-        required: false
-        type: boolean
-        default: false
-        description: 'Builds a ARM image, on a self-hosted runner ARM machine'
       push-to-manifests:
         required: false
         type: boolean
