--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -294,7 +294,12 @@ jobs:
           GRADLE_MODULE: ${{ inputs.gradle-module }}
         run: |
           ./gradlew $GRADLE_TASK
-
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.TECHDOCS_AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.TECHDOCS_AWS_ACCESS_KEY_ID }}
+          aws-region: 'eu-west-1'
       - name: Upload Open API Spec to S3 backstage bucket
         shell: bash
         # env:
