--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -223,10 +223,6 @@ jobs:
     needs: [ init, test ]
     runs-on: ubuntu-latest
     timeout-minutes: 30
-    # env:
-    #   AWS_ACCESS_KEY_ID: ${{ secrets.TECHDOCS_AWS_ACCESS_KEY_ID }}
-    #   AWS_SECRET_ACCESS_KEY: ${{ secrets.TECHDOCS_AWS_SECRET_ACCESS_KEY }}
-    #   AWS_REGION: 'eu-west-1'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -283,18 +279,18 @@ jobs:
           GRADLE_MODULE: ${{ inputs.gradle-module }}
         run: |
           ./gradlew $GRADLE_TASK
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.TECHDOCS_AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.TECHDOCS_AWS_ACCESS_KEY_ID }}
-          aws-region: 'eu-west-1'
+      # - name: Configure AWS credentials
+      #   uses: aws-actions/configure-aws-credentials@v1
+      #   with:
+      #     aws-access-key-id: ${{ secrets.TECHDOCS_AWS_ACCESS_KEY_ID }}
+      #     aws-secret-access-key: ${{ secrets.TECHDOCS_AWS_ACCESS_KEY_ID }}
+      #     aws-region: 'eu-west-1'
       - name: Upload Open API Spec to S3 backstage bucket
         shell: bash
-        # env:
-        #   AWS_ACCESS_KEY_ID: ${{ secrets.TECHDOCS_AWS_ACCESS_KEY_ID }}
-        #   AWS_SECRET_ACCESS_KEY: ${{ secrets.TECHDOCS_AWS_SECRET_ACCESS_KEY }}
-        #   AWS_REGION: 'eu-west-1'
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.TECHDOCS_AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.TECHDOCS_AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: 'eu-west-1'
         run: |
           # Find the generated spec
           YML_FILE=$(find . -type f -name '*.yml' \
