--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -226,7 +226,7 @@ jobs:
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.TECHDOCS_AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.TECHDOCS_AWS_SECRET_ACCESS_KEY }}
-      AWS_REGION: 'eu-west-1'
+      AWS_DEFAULT_REGION: 'eu-west-1'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
